some layout, next - MidCenter

--- a/test.html
+++ b/test.html
@@ -1,84 +1,53 @@
-<!DOCTYPE html>
-<html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Phòng với 3 bức tường</title>
-    <style>
-      body {
-        background-color: #111;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-      }
+<style>
+  .cup-scene {
+    position: relative;
+    width: 200px;
+    height: 250px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    margin: 50px auto;
+  } /* Miếng
+lót */
+  .coaster {
+    position: absolute;
+    bottom: 0;
+    width: 120px;
+    height: 20px;
+    background: radial-gradient(circle, #c49b66, #8b5e3c);
+    border-radius: 50%;
+    z-index: 0;
+  } /* Cốc */
+  .cup {
+    position: relative;
+    width: 80px;
+    height: 140px;
+    z-index: 1;
+  } /* Miệng cốc */
+  .cup-top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    background: radial-gradient(circle, #ffffff, #cccccc);
+    border-radius: 50%;
+    z-index: 2;
+  } /* Thân cốc */
+  .cup-body {
+    position: absolute;
+    top: 10px;
+    width: 100%;
+    height: 130px;
+    background: linear-gradient(to bottom, #eee, #ccc);
+    border-radius: 40% / 10%;
+  }
+</style>
 
-      .room {
-        position: relative;
-        width: 400px;
-        height: 300px;
-        perspective: 1000px;
-      }
-
-      .wall {
-        position: absolute;
-        height: 100%;
-        background: #666;
-        opacity: 0.9;
-      }
-
-      .front {
-        width: 100%;
-        background: #888;
-        z-index: 3;
-      }
-
-      .left {
-        width: 100px;
-        left: 0;
-        transform-origin: left;
-        transform: rotateY(60deg);
-        background: #555;
-        z-index: 2;
-      }
-
-      .right {
-        width: 100px;
-        right: 0;
-        transform-origin: right;
-        transform: rotateY(-60deg);
-        background: #555;
-        z-index: 2;
-      }
-
-      .bottom {
-        width: 100%;
-        height: 100px;
-        bottom: 0;
-        background: #444;
-        transform-origin: bottom;
-        transform: rotateX(75deg);
-        z-index: 1;
-      }
-
-      .back-corner {
-        position: absolute;
-        width: 5px;
-        height: 100%;
-        left: 50%;
-        transform: translateX(-50%);
-        background: #444;
-        z-index: 1;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="room">
-      <div class="wall front"></div>
-      <div class="wall left"></div>
-      <div class="wall right"></div>
-      <div class="wall bottom"></div>
-      <div class="back-corner"></div>
-    </div>
-  </body>
-</html>
+<div class="cup-scene">
+  <div class="coaster"></div>
+  <div class="cup">
+    <div class="cup-top"></div>
+    <div class="cup-body"></div>
+  </div>
+</div>
